--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "hexo": "^3.2.0",
+    "hexo-admin": "^2.1.0",
     "hexo-deployer-git": "^0.2.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
@@ -21,6 +22,7 @@
     "hexo-server": "^0.2.0"
   },
   "devDependencies": {
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.0",
+    "react-router-native": "^4.1.1"
   }
 }
